# c3-build-file-ts

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  changelog.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-c3-build-file.pc.in  tree-sitter-ts-c3-build-file.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_c3_build_file/: __init__.py  binding.c
bindings/python/tree_sitter_ts_c3_build_file/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterC3BuildFile/: c3_build_file.h
bindings/swift/TreeSitterC3BuildFileTests/: TreeSitterC3BuildFileTests.swift
bindings/swift/TreeSitterTsC3BuildFile/: ts_c3_build_file.h
bindings/swift/TreeSitterTsC3BuildFileTests/: TreeSitterTsC3BuildFileTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
